@@ -363,8 +363,8 @@ budget value 			{color:rgba(85,85,85,1);}
 /*	Transaction table
 	============================================= */
 transaction							{border-top:1px solid rgba(235,235,235,1);}
-transaction a						{color:rgba(125,125,125,1);}
-transaction a:hover					{color:rgba(173,173,173,1);}
+transaction a						{color:rgba(85,85,85,1);}
+transaction a:hover					{color:rgba(163,0,13,1);}
 transaction:last-of-type			{border-bottom:0px solid rgba(143,143,143,1);}
 transaction:nth-of-type(1):before	{color:rgba(255,255,255,1); background-color:rgba(186,12,47,1);}
 
