@@ -359,8 +359,8 @@ budget value 			{color:rgba(255,255,255,1);}
 /*	Transaction table
 	============================================= */
 transaction							{border-top:1px solid rgba(143,143,143,1);}
-transaction a						{color:rgba(125,125,125,1);}
-transaction a:hover					{color:rgba(173,173,173,1);}
+transaction a						{color:rgba(255,163,0,1);}
+transaction a:hover					{color:rgba(255,183,0,1);}
 transaction:last-of-type			{border-bottom:0px solid rgba(143,143,143,1);}
 transaction:nth-of-type(1):before	{color:rgba(255,255,255,1); background-color:rgba(206,131,0,1);}
 
